--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
       </form>
     </template>
     <template id="single-project">
-      <li draggable="true"></li>
-    </template>
+      <li class="single-project" draggable="true">
+        <h2></h2>
+        <h3></h3>
+        <p></p>
+      </li>
+    </template>    
     <template id="project-list">
       <section class="projects">
         <header>
