--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ProjectManager</title>
     <link rel="stylesheet" href="app.css" />
-    <script src="dist/bundle.js" defer></script>
+    <script type="module" src="dist/app.js"></script>
   </head>
   <body>
     <template id="project-input">
@@ -27,12 +27,12 @@
       </form>
     </template>
     <template id="single-project">
-      <li class="single-project" draggable="true">
+      <li draggable="true">
         <h2></h2>
         <h3></h3>
         <p></p>
       </li>
-    </template>    
+    </template>
     <template id="project-list">
       <section class="projects">
         <header>
